[package]
name = "advent-of-code"
version = "0.1.0"
authors = ["Pete Gadomski <pete.gadomski@gmail.com>"]

[dependencies]
chrono = "*"
failure = "*"
regex = "*"

[[bin]]
name = "day-01"
path = "src/01.rs"

[[bin]]
name = "day-02"
path = "src/02.rs"

[[bin]]
name = "day-03"
path = "src/03.rs"

[[bin]]
name = "day-04"
path = "src/04.rs"

[[bin]]
name = "day-05"
path = "src/05.rs"

[[bin]]
name = "day-06"
path = "src/06.rs"

[[bin]]
name = "day-07"
path = "src/07.rs"

[[bin]]
name = "day-08"
path = "src/08.rs"
